Setting scheduled build to run only on main

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ on:
     branches:
       - 'main'
   schedule:
+    branches:
+        - 'main'
     - cron: '30 23 24-31 * 6'
   workflow_dispatch:
 
