--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,6 @@ on:
   pull_request:
     branches:
       - 'main'
-  schedule:
-    - cron: '30 23 24-31 * 6'
   workflow_dispatch:
 
 jobs:
@@ -16,38 +14,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v3
+      - name: Build
+        uses: docker/build-push-action@v2.6.1
         with:
-          images: cbbm142/canvas
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-      - name: Login to DockerHub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-      - name: Docker Hub Description
-        if: ${{ steps.extract_branch.outputs.branch }} == 'main'
-        uses: peter-evans/dockerhub-description@v2.4.2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          short-description: Canvas LMS for local development of LTI apps
-          repository: cbbm142/canvas
+          push: false
