--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,14 +17,11 @@ jobs:
         id: extract_branch
       - name: Docker meta
         id: meta
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v3.4.0
         with:
           images: cbbm142/canvas
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value={{tag}}
       - name: Login to DockerHub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
@@ -34,7 +31,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2.6.1
         with:
-          context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
